--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
     platform: postgres
-    url: jdbc:${DB_URL}
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
+    url: jdbc:${postgresql://postgres:1234@localhost:5432/postgres}
+    username: ${POSTGRES_USER}
+    password: ${atradius}
   jpa:
     generate-ddl: true
     hibernate:
